Changes in version 1.0-20:

* Fixed a small typographical error in the help for correctBias.

Changes in version 1.0-19:

* Moved COPYRIGHTS to inst/COPYRIGHTS and greatly added detailed information 
to the file.
* Modified DESCRIPTION to note contribution of the authors of ANN (as per 
CRAN policy).
* Added a Copyright statement to DESCRIPTION.  
* Added detail to the Description statement in file DESCRIPTION.
* Fixed print.yai.R error when there is only one target and K>1.
* Modified the file handling in AsciiGridPredict (and AsciiGridImpute).
* Fixed a case where a reference picks itself as the second most similar neighbor. This only
happens when there are two or more identical reference observations (thanks to Petteri Packalen).
* Further revision to the ftest to deal with degenerate cases and put in a trap on the use
of method="msn2" when there are too few observations.

Changes in version 1.0-18:

* Added a function (notablyDifferent) to use a consistent method to identify 
observations with large error. 
* Added an function to (plot.notablyDifferent) to plot the data from notablyDifferent().
* Modified the ftest in yai() so that it correctly computes the number of canonical variates.

Changes in version 1.0-17:

* Replaced deprecated calls to sd(<matrix>|<data.frame>) and mean(<matrix>|<data.frame>) with apply().
* Commented out use of cout in ANN routines.
* Added a function (correctBias) to check for bias and correct it by finding different neighbors.
* Added an option to notablyDistant() to compute the threshold using quantile().
* Changed Crookston's email address.

Changes in version 1.0-16:

* Fixed and moved this news files.
* Fixed long standing error in the way Mahalanobis distances are computed
(thanks to Petteri Packalen)
* Fixed the use of "useid" in AsciiGridImpute and modified the help pages
to make it more clear.
* Removed the provisional use of a modified versions of randomForest.default as